# RFSN-LEARNER

./: .gitignore  Dockerfile  README.md  agent_ledger.jsonl  pyproject.toml
controller/: __init__.py  action_io.py  action_parser.py  agent_gate.py  agent_loop.py  arm_applicator.py  budget_enforcer.py  chat.py  cli.py  config.py  context_builder.py  docker_runner.py  errors.py  hasher.py  learner_bridge.py  ledger_events.py  llm_client.py  metrics.py  patch_applier.py  permissions.py  prompts.py  replay.py  replay_store.py  reward.py  run_task.py  runner.py  session_runner.py  swe_eval.py  test_delta.py  test_runner.py  tool_registry.py  tool_router.py  tool_schema.py  turn_utils.py  validate_tool_call.py
dashboard/: __init__.py  app.py
examples/: smoke_candidates.json  smoke_task.json  swebench_lite_sample.jsonl  task_example.json  tasks.jsonl
results/: result.json
rfsn/: cli.py  crypto.py  gate.py  ledger.py  policy.py  replay.py  types.py
scripts/: run_swebench.py
tests/: __init__.py  test_arm_applicator.py  test_arms.py  test_bandit.py  test_docker_mode.py  test_gate.py  test_learner.py  test_ledger.py  test_metrics.py  test_new_tools.py  test_policy.py  test_replay.py  test_replay_integrity.py  test_reward.py  test_session_store.py  test_shell_hardening.py  test_test_delta.py  test_tool_registry.py
tmp/: outcomes.sqlite  outcomes.sqlite.rfsn_snap.1770358129_start
ui/: requirements.txt  server.py  session_store.py
upstream_learner/: __init__.py  analytics.py  arm_registry.py  arms.py  bandit.py  cli.py  outcome_db.py  propose.py  selector.py
(+41 files in other folders)
